# nimbletools-mcp-registry

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  registry.yaml
.github/workflows/: deploy-registry.yml  pr-check.yml  test-servers.yml  validate.yml
schemas/: registry-schema.yaml  server-schema.yaml
servers/echo/: server.yaml
servers/finnhub/: server.yaml
servers/nationalparks-mcp/: server.yaml
servers/ref-tools-mcp/: server.yaml
servers/reverse-text/: server.yaml
servers/tavily-mcp/: server.yaml
tools/: __init__.py  cli.py  generate.py  test_server.py  validate.py  wizard.py
